--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "setup-project": "npm i && cd client && npm i",
     "server": "nodemon server",
     "client": "cd client && npm run dev",
-    "dev": "nodemon server.js"
+    "dev": "concurrently --kill-others-on-fail \" npm run server\" \" npm run client\""
   },
   "keywords": [],
   "author": "",
