--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "cloudinary": "^1.37.3",
     "concurrently": "^8.0.1",
     "cookie-parser": "^1.4.6",
+    "csv-writer": "^1.6.0",
+    "csvtojson": "^2.0.10",
     "datauri": "^4.1.0",
     "dayjs": "^1.11.9",
     "dotenv": "^16.0.3",
@@ -35,6 +37,7 @@
     "multer": "^1.4.5-lts.1",
     "nanoid": "^4.0.2",
     "nodemon": "^2.0.22",
+    "papaparse": "^5.4.1",
     "square": "^31.0.0"
   }
 }
