--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,12 @@
     "@tanstack/react-query": "^4.29.5",
     "@tanstack/react-query-devtools": "^4.29.6",
     "axios": "^1.3.6",
+    "bootstrap": "^5.3.2",
     "dayjs": "^1.11.7",
     "lodash": "^4.17.21",
+    "primereact": "^10.0.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.0",
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
