--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^6.10.0",
     "react-toastify": "^9.1.2",
     "recharts": "^2.5.0",
