--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "dayjs": "^1.11.7",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-barcode": "^1.4.6",
     "react-bootstrap": "^2.9.0",
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
