--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
   "main": "index.js",
   "type": "module",
+  "engines": {
+    "node": ">=18.18.0 <19.0.0"
+  },
   "scripts": {
     "setup-project": "npm i && cd client && npm i",
     "server": "nodemon server",
