--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "csvtojson": "^2.0.10",
     "datauri": "^4.1.0",
     "dayjs": "^1.11.9",
+    "dedent-js": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
